Fix active-enrolment ui readability

--- a/ui/src/assets/styles/partial/_defines.scss
+++ b/ui/src/assets/styles/partial/_defines.scss
@@ -855,6 +855,9 @@ $sitnet-icon-size: 32px;
 .border-top-none {
   border-top: none !important;
 }
+.border-top-black {
+  border-top: 1px black !important;
+}
 .custom-green-dot{
   height: 5px;
   width: 5px;
